name:                weighing
version:             0
build-type:          Simple
cabal-version:       >=1.10

executable weighing
  hs-source-dirs: .
  build-depends: base, weigh, binary, bytestring, deepseq, cardano-sl, containers, text, formatting, serokell-util, universum, cardano-sl-core, data-default, unordered-containers, cryptonite, memory, base58-bytestring, hashable, text-format
  ghc-options: -O2 -rtsopts
  default-language: Haskell2010
  main-is: Main.hs
